--- a/BestPractices/Dockerfile
+++ b/BestPractices/Dockerfile
@@ -7,7 +7,7 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY ["Best Practices.csproj", "BestPractices/"]
+COPY ["BestPractices/Best Practices.csproj", "BestPractices/"]
 RUN dotnet restore "BestPractices/Best Practices.csproj"
 COPY . .
 WORKDIR "/src/BestPractices"
